k8s/applications/automation/matter-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matter-server
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
