k8s/applications/automation/matter-server/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: matter-server-ble
  namespace: matter-server
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      port: 5580
  rules:
    - backendRefs:
        - name: matter-server
          port: 5580
